# pc-controller

./: .gitignore  AGENTS.md  Cargo.toml  EXAMPLES.md  README.md
PC-Controller/: bruno.json  list devices.bru  list session.bru  list sessions.bru  set volume.bru
PC-Controller/environments/: hom.bru
flutter/: .env.example  AGENTS.md  README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/core/clients/: api_error.dart  api_response.dart  app_logger.dart  http_client.dart  logging_interceptor.dart  message.dart  retry_interceptor.dart  ws_client.dart  ws_client_interface.dart
flutter/lib/core/di/: di_container.dart  get_it_container.dart  injection_container.dart  service_locator.dart
flutter/lib/core/errors/: app_error.dart
flutter/lib/core/logging/: app_logger.dart  app_logger_impl.dart  file_log_sink.dart  global_error_hooks.dart  log_level.dart  log_record.dart  log_sink.dart
flutter/lib/core/navigation/: app_module.dart  app_shell_page.dart  menu_side.dart  module_registry.dart  navigation_controller.dart
flutter/lib/core/settings/: app_settings.dart  retry_config.dart
flutter/lib/core/theme/: app_color_tokens.dart  app_layout_tokens.dart  app_theme.dart  side_menu_tokens.dart  theme_context.dart
flutter/lib/features/: ws_connection_state.dart
flutter/lib/features/audio/: audio_devices_page.dart  audio_feature_module.dart  audio_page.dart  audio_sessions_page.dart
flutter/lib/features/home/: home_feature_module.dart  home_page.dart
flutter/test/: widget_test.dart
flutter/test/core/clients/: api_response_test.dart  (+2 more)
flutter/windows/runner/: Runner.rc
src/: lib.rs  main.rs  modules.rs
src/modules/: app_router.rs  core.rs  volume_control.rs
src/modules/audio_control/: audio_handlers.rs  audio_module.rs  mod.rs
src/modules/core/: broadcast.rs  global_handler.rs  handler.rs  helper.rs  mod.rs  response_builder.rs
src/modules/volume_control/: audio_handlers.rs  audio_type.rs  audio_utils.rs  com_utils.rs  device_controller.rs  handlers.rs  helper.rs  models.rs  sound_device_service.rs  sound_session_service.rs  volume_control_command.rs
(+70 files in other folders)
