[package]
name = "pc-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
# axum = "0.8.4"
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
