[package]
name = "pc-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "pc_controller"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41" 

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.26.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
